--- a/fr/applicators-corner/comment-eviter-les-taches-ou-marques-indesirables-en-appliquant-le-beton-cire.html
+++ b/fr/applicators-corner/comment-eviter-les-taches-ou-marques-indesirables-en-appliquant-le-beton-cire.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 <head>
 <meta charset="utf-8"><meta name="theme-color" content="#000"/>
 <meta name="viewport" content="width=device-width" />
@@ -7,7 +7,7 @@
 <!--[if lt IE 9]> <script src="../../js/css3-mediaqueries.js"></script> <![endif]-->
 <link rel="stylesheet" type="text/css" href="../../css/estilo.css">
 <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-<meta name="language" content="fr-FR" />
+<meta name="language" content="fr" />
 <link rel="publisher" href="https://plus.google.com/+topciment" />
 
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -382,14 +382,14 @@ Nous devons commencer en faisant un angle regroupant la hauteur totale du mur, l
         <div class="col-md-3 col2F">
           <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
           <ul class="ulF proyectos">
-            <li class="suelosF"><a class="linkB" href="../gallery.html#suelos">Rénovation de sols </a></li>
-            <li class="paredesF"><a class="linkB" href="../gallery.html#paredes">Revêtements de murs</a></li>
-            <li class="banyoF"><a class="linkB" href="../gallery.html#banyo">Rénovation de salle de bains </a></li>
-            <li class="cocinasF"><a class="linkB" href="../gallery.html#cocinas">Rénovation de cuisine</a></li>
-            <li class="decontiuosF"><a class="linkB" href="../gallery.html#decontinuos">Revêtements décoratives
+            <li class="suelosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols </a></li>
+            <li class="paredesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de murs</a></li>
+            <li class="banyoF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle de bains </a></li>
+            <li class="cocinasF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de cuisine</a></li>
+            <li class="decontiuosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements décoratives
                 continues</a></li>
-            <li class="mueblesF"><a class="linkB" href="../gallery.html#muebles">Décoration de meubles</a></li>
-            <li class="azulejosF"><a class="linkB" href="../gallery.html#azulejos">Recouvrir carrelage </a></li>
+            <li class="mueblesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de meubles</a></li>
+            <li class="azulejosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir carrelage </a></li>
           </ul>
         </div>
         <div class="col-md-3 col3F">
