--- a/fr/applicators-corner/conditions-avant-l-application-du-beton-cire.html
+++ b/fr/applicators-corner/conditions-avant-l-application-du-beton-cire.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <!--[if lt IE 9]> <script src="../../js/css3-mediaqueries.js"></script> <![endif]-->
   <link rel="stylesheet" type="text/css" href="../../css/fr-estilo.css">
   <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-  <meta name="language" content="fr-FR" />
+  <meta name="language" content="fr" />
   <link rel="publisher" href="https://plus.google.com/+topciment" />
 
   <link
@@ -40,10 +40,10 @@
     hreflang="es-ES" />
   <link rel="alternate"
     href="https://www.topciment.com/en/applicators-corner/conditions-prior-preparation-of-the-support-and-application.html"
-    hreflang="en-GB" />
+    hreflang="en" />
   <link rel="alternate"
     href="https://www.topciment.com/fr/applicators-corner/conditions-avant-l-application-du-beton-cire.html"
-    hreflang="fr-FR" />
+    hreflang="fr" />
   <link rel="alternate"
     href="https://www.topciment.com/de/die-ecke-vom-fachmann/mischung-von-einzelkomponenten-und-bikomponenten-mikrozement.html"
     hreflang="de-DE" />
@@ -366,14 +366,14 @@
                       href="../information-beton-cire.html">béton ciré</a>. Impoxy résout les problèmes d’humidité en
                     permettant l’application sur le support de revêtements de béton ciré..</p>
                   <ul>
-                    <li> Apprêt au rouleau avec Impoxy à 0,35 kg/m2<br>
+                    <li> Apprêt au rouleau avec Impoxy à 0,35 kg /m²<br>
                     </li>
-                    <li> Saupoudrer du sable de silicium sec de 0,3-0,8 mm à 1 kg/m2<br>
+                    <li> Saupoudrer du sable de silicium sec de 0,3-0,8 mm à 1 kg /m²<br>
                     </li>
                     <li> Laisser sécher 24 heures</li>
                     <li> Retirer le sable de silicium en trop en balayant et aspirant.<br>
                     </li>
-                    <li> Application d’Impoxy avec une truelle à 3 kg/m2</li>
+                    <li> Application d’Impoxy avec une truelle à 3 kg /m²</li>
                   </ul>
                   <h3>Installation de la maille</h3>
                   <p>Le béton ciré Topciment ne se fissure pas, tant que la base sur laquelle il est placé ne le fasse
@@ -446,14 +446,14 @@
         <div class="col-md-3 col2F">
           <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
           <ul class="ulF proyectos">
-            <li class="suelosF"><a class="linkB" href="../gallery.html#suelos">Rénovation de sols </a></li>
-            <li class="paredesF"><a class="linkB" href="../gallery.html#paredes">Revêtements de murs</a></li>
-            <li class="banyoF"><a class="linkB" href="../gallery.html#banyo">Rénovation de salle de bains </a></li>
-            <li class="cocinasF"><a class="linkB" href="../gallery.html#cocinas">Rénovation de cuisine</a></li>
-            <li class="decontiuosF"><a class="linkB" href="../gallery.html#decontinuos">Revêtements décoratives
+            <li class="suelosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols </a></li>
+            <li class="paredesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de murs</a></li>
+            <li class="banyoF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle de bains </a></li>
+            <li class="cocinasF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de cuisine</a></li>
+            <li class="decontiuosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements décoratives
                 continues</a></li>
-            <li class="mueblesF"><a class="linkB" href="../gallery.html#muebles">Décoration de meubles</a></li>
-            <li class="azulejosF"><a class="linkB" href="../gallery.html#azulejos">Recouvrir carrelage </a></li>
+            <li class="mueblesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de meubles</a></li>
+            <li class="azulejosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir carrelage </a></li>
           </ul>
         </div>
         <div class="col-md-3 col3F">
