--- a/fr/efectto.html
+++ b/fr/efectto.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -20,7 +20,7 @@
 	<link rel="canonical" href="https://www.topciment.com/fr/efectto.html" />
 
 	<link rel="alternate" href="https://www.topciment.com/efectto.html" hreflang="es-ES" />
-	<link rel="alternate" href="https://www.topciment.com/fr/efectto.html" hreflang="fr-FR" />
+	<link rel="alternate" href="https://www.topciment.com/fr/efectto.html" hreflang="fr" />
 	<link rel="alternate" href="https://www.topciment.com/de/efectto.html" hreflang="de-DE" />
 	<link rel="alternate" href="https://www.topciment.com/it/efectto.html" hreflang="it-IT" />
 	<link rel="alternate" href="https://www.topciment.com/nl/efectto.html" hreflang="nl-NL" />
