--- a/fr/information-beton-cire.html
+++ b/fr/information-beton-cire.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
@@ -8,7 +8,7 @@
 	<!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
 	<link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-	<meta name="language" content="fr-FR" />
+	<meta name="language" content="fr" />
 	<link rel="publisher" href="https://plus.google.com/+topciment" />
 	<link
 		href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext'
@@ -31,9 +31,9 @@
 
 	<link rel="canonical" href="https://www.topciment.com/fr/information-beton-cire.html" />
 
-	<link rel="alternate" href="https://www.topciment.com/fr/information-beton-cire.html" hreflang="fr-FR" />
+	<link rel="alternate" href="https://www.topciment.com/fr/information-beton-cire.html" hreflang="fr" />
 	<link rel="alternate" href="https://www.topciment.com/microcementos.html" hreflang="es-ES" />
-	<link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en-GB" />
+	<link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en" />
 	<link rel="alternate" href="https://www.topciment.com/de/mikrozement-informationen.html" hreflang="de-DE" />
 	<link rel="alternate" href="https://www.topciment.com/it/informazioni-microcemento.html" hreflang="it-IT" />
 	<link rel="alternate" href="https://www.topciment.com/nl/informatie-over-microcement.html" hreflang="nl-NL" />
@@ -1165,7 +1165,7 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 								<td>2 - 3 mm</td>
 								<td>Ne nécessite pas de joints</td>
 
-								<td>0,01 Kn/m2</td>
+								<td>0,01 Kn /m²</td>
 								<td>Rénovations sans décombres, couvrir carrelages, revêtements de meubles…</td>
 							</tr>
 							<tr>
@@ -1177,7 +1177,7 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 								<td>5 -10 cm</td>
 
 								<td>Maximum tous les 25 m2</td>
-								<td>(e=10 cm) 2,50 Kn/m2</td>
+								<td>(e=10 cm) 2,50 Kn /m²</td>
 								<td>Parcs ou promenades publiques. Avec des finitions rustiques simulant
 
 									la pierre.</td>
@@ -1190,7 +1190,7 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 								<td>Sols</td>
 								<td>5 -10 cm</td>
 								<td>Maximum tous les 25 m2</td>
-								<td>&nbsp;(e=10 cm) 2,50 Kn/m2</td>
+								<td>&nbsp;(e=10 cm) 2,50 Kn /m²</td>
 								<td>Avec
 
 									finition lisse, pour parkings et grandes surfaces</td>
@@ -1203,7 +1203,7 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 								<td>Sols</td>
 								<td>5 -10 cm</td>
 								<td>Maximum tous les 25 m2</td>
-								<td>(e=10 cm) 2,50 Kn/m2</td>
+								<td>(e=10 cm) 2,50 Kn /m²</td>
 								<td>Aspect très
 
 									similaire à un granito. Finition lisse, pour sols de grandes surfaces.</td>
@@ -1216,7 +1216,7 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 								<td>Murs et sols</td>
 								<td>2 cm</td>
 								<td>Maximum tous les 25 m2</td>
-								<td>(e=2 cm) 0,50 Kn/m2
+								<td>(e=2 cm) 0,50 Kn /m²
 
 								</td>
 								<td>&nbsp;</td>
@@ -1394,15 +1394,15 @@ text-decoration:none;"> <strong> Le béton ciré est-il imperméable ? </strong>
 				<div class="col-md-3 col2F">
 					<h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
 					<ul class="ulF proyectos">
-						<li class="suelosF"><a class="linkB" href="gallery.html#suelos">Rénovation de sols </a></li>
-						<li class="paredesF"><a class="linkB" href="gallery.html#paredes">Revêtements de murs</a></li>
-						<li class="banyoF"><a class="linkB" href="gallery.html#banyo">Rénovation de salle de bains </a>
+						<li class="suelosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de sols </a></li>
+						<li class="paredesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de murs</a></li>
+						<li class="banyoF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation de salle de bains </a>
 						</li>
-						<li class="cocinasF"><a class="linkB" href="gallery.html#cocinas">Rénovation de cuisine</a></li>
-						<li class="decontiuosF"><a class="linkB" href="gallery.html#decontinuos">Revêtements décoratives
+						<li class="cocinasF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de cuisine</a></li>
+						<li class="decontiuosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements décoratives
 								continues</a></li>
-						<li class="mueblesF"><a class="linkB" href="gallery.html#muebles">Décoration de meubles</a></li>
-						<li class="azulejosF"><a class="linkB" href="gallery.html#azulejos">Recouvrir carrelage </a>
+						<li class="mueblesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de meubles</a></li>
+						<li class="azulejosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir carrelage </a>
 						</li>
 					</ul>
 				</div>
