--- a/fr/technique-d-application-frais-sur-frais.html
+++ b/fr/technique-d-application-frais-sur-frais.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -136,7 +136,7 @@
             <li><a href="../couleurs-du-beton-cire.html">Colours</a>
             </li>
             <li><a href="../sistems.html">Sistems</a></li>
-            <li><a href="../gallery.html">Gallery</a></li>
+            <li><a href="../photos-du-revetement-decoratif-beton-cire.html.html">Photos</a></li>
             <li><a href="../guarantee.html">Guarantee</a></li>
             <li><a href="../professionals.html" class="activo">Professionals</a>
             </li>
@@ -193,9 +193,9 @@
           <li><a href="../couleurs-du-beton-cire.html" onclick="ocultarmovil()">Colours</a>
           </li>
           <li><a href="../sistems.html" onclick="ocultarmovil()">Sistems</a></li>
-          <li><a class="link colores" onclick="mostrarSubmenu()">Gallery</a>
+          <li><a class="link colores" onclick="mostrarSubmenu()">Photos</a>
             <ul id="submenumovil">
-              <li><a href="../gallery.html">Suelos de Microcement</a>
+              <li><a href="../photos-du-revetement-decoratif-beton-cire.html.html">Suelos de Microcement</a>
               </li>
               <!--li><a href="../galeria-microcemento-de-alto-transito.html">Microcement de alto transito</a></li-->
               <li><a href="#">Microcement en paredes</a></li>
