--- a/fr/termes-conditions-et-declaration-de-confidentialite.html
+++ b/fr/termes-conditions-et-declaration-de-confidentialite.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 <head>
 <meta charset="utf-8"><meta name="theme-color" content="#000"/>
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
 <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-<meta name="language" content="fr-FR" />
+<meta name="language" content="fr" />
 <link rel="publisher" href="https://plus.google.com/+topciment" />
 
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
