--- a/fr/applicators-corner/application-de-l-agent-de-scellages.html
+++ b/fr/applicators-corner/application-de-l-agent-de-scellages.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
@@ -351,19 +351,19 @@
 				<div class="col-md-3 col2F">
 					<h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
 					<ul class="ulF proyectos">
-						<li class="suelosF"><a class="linkB" href="../gallery.html#suelos">Rénovation de sols </a></li>
-						<li class="paredesF"><a class="linkB" href="../gallery.html#paredes">Revêtements de murs</a>
+						<li class="suelosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols </a></li>
+						<li class="paredesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de murs</a>
 						</li>
-						<li class="banyoF"><a class="linkB" href="../gallery.html#banyo">Rénovation de salle de bains
+						<li class="banyoF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle de bains
 							</a></li>
-						<li class="cocinasF"><a class="linkB" href="../gallery.html#cocinas">Rénovation de cuisine</a>
+						<li class="cocinasF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de cuisine</a>
 						</li>
-						<li class="decontiuosF"><a class="linkB" href="../gallery.html#decontinuos">Revêtements
+						<li class="decontiuosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements
 								décoratives
 								continues</a></li>
-						<li class="mueblesF"><a class="linkB" href="../gallery.html#muebles">Décoration de meubles</a>
+						<li class="mueblesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de meubles</a>
 						</li>
-						<li class="azulejosF"><a class="linkB" href="../gallery.html#azulejos">Recouvrir carrelage </a>
+						<li class="azulejosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir carrelage </a>
 						</li>
 					</ul>
 				</div>
