--- a/fr/conditions-prior-preparation-of-the-support-and-application.html
+++ b/fr/conditions-prior-preparation-of-the-support-and-application.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -136,7 +136,7 @@
             <li><a href="../couleurs-du-beton-cire.html">Colours</a>
             </li>
             <li><a href="../sistems.html">Sistems</a></li>
-            <li><a href="../gallery.html">Gallery</a></li>
+            <li><a href="../photos-du-revetement-decoratif-beton-cire.html.html">Photos</a></li>
             <li><a href="../guarantee.html">Guarantee</a></li>
             <li><a href="../professionals.html" class="activo">Professionals</a>
             </li>
@@ -193,9 +193,9 @@
           <li><a href="../couleurs-du-beton-cire.html" onclick="ocultarmovil()">Colours</a>
           </li>
           <li><a href="../sistems.html" onclick="ocultarmovil()">Sistems</a></li>
-          <li><a class="link colores" onclick="mostrarSubmenu()">Gallery</a>
+          <li><a class="link colores" onclick="mostrarSubmenu()">Photos</a>
             <ul id="submenumovil">
-              <li><a href="../gallery.html">Suelos de Microcement</a>
+              <li><a href="../photos-du-revetement-decoratif-beton-cire.html.html">Suelos de Microcement</a>
               </li>
               <!--li><a href="../galeria-microcemento-de-alto-transito.html">Microcement de alto transito</a></li-->
               <li><a href="#">Microcement en paredes</a></li>
@@ -333,7 +333,7 @@
                     <li> Allow to dry for 24 hours</li>
                     <li> Remove excess sand by sweeping and vacuuming <br>
                     </li>
-                    <li> Apply Impoxy using a trowel at 3 kg/m2</li>
+                    <li> Apply Impoxy using a trowel at 3 kg /m²</li>
                   </ul>
                   <h3> Installation of the mesh</h3>
                   <p>Micro-cement Topciment does not crack, as long as the base upon which it has been placed also does
