--- a/fr/nouvelles.html
+++ b/fr/nouvelles.html
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
-	<meta charset="utf-8"><meta name="theme-color" content="#000"/>
+	<meta charset="utf-8">
+	<meta name="theme-color" content="#000" />
 	<meta name="viewport" content="width=device-width" />
 	<!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
 	<link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-	<meta name="language" content="fr-FR" />
+	<meta name="language" content="fr" />
 	<link rel="publisher" href="https://plus.google.com/+topciment" />
 
 	<link
@@ -16,7 +17,16 @@
 	<link rel="stylesheet" href="../font-awesome-4.6.3/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="../css/animate.css">
-
+	<!-- Nuevo estilo y js de página -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/restyle.css">
+	<script type='text/javascript' src='../js/mycode.js'></script>
+	<!-- End new styles -->
 
 	<title>Nouvelles sur le Béton Ciré Topciment.</title>
 	<meta name="description"
@@ -26,8 +36,8 @@
 	<link rel="canonical" href="https://www.topciment.com/fr/nouvelles.html" />
 
 	<link rel="alternate" href="https://www.topciment.com/noticias.html" hreflang="es-ES" />
-	<link rel="alternate" href="https://www.topciment.com/fr/nouvelles.html" hreflang="fr-FR" />
-	<link rel="alternate" href="https://www.topciment.com/en/news.html" hreflang="en-GB" />
+	<link rel="alternate" href="https://www.topciment.com/fr/nouvelles.html" hreflang="fr" />
+	<link rel="alternate" href="https://www.topciment.com/en/news.html" hreflang="en" />
 	<link rel="alternate" href="https://www.topciment.com/de/nachrichten.html" hreflang="de-DE" />
 	<link rel="alternate" href="https://www.topciment.com/it/notizie.html" hreflang="it-IT" />
 	<link rel="alternate" href="https://www.topciment.com/nl/nieuws.html" hreflang="nl-NL" />
@@ -138,8 +148,11 @@
 	<div id="header">
 		<div class="menuBar" style="position:fixed; transform: translate3d(0px, 0px, 1px);">
 			<div class="menuBarContent">
-
-				<a href="index.html"><img class="imgLogo" src="../imagenes/logo-top-ciment.png" alt="Topciment"></a>
+				<a href="index.html"><img class="imgLogo logo1" src="../imagenes/microcemento-topciment.png"
+						alt="Topciment">
+					<img class="imgLogo logo2" src="../imagenes/logos/logoBlanco2.png" alt="Topciment"
+						style="max-width: 60px; max-height: 60px;">
+				</a>
 
 
 				<div class="menu idiomas">
@@ -161,41 +174,30 @@
 					</ul>
 				</div>
 
-				<div class="menu botones">
+				<div class="menu botones" style="margin-left:100px">
 					<ul>
 						<li><a href="information-beton-cire.html">Béton Ciré</a></li>
-						<li><a href="couleurs-du-beton-cire.html">Couleurs</a></li>
 						<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html">Systèmes</a></li>
 						<li><a href="photos-du-revetement-decoratif-beton-cire.html">Photos</a></li>
-						<li><a href="garantie.html">Garantie</a></li>
-						<li><a href="professionnels.html">Professionnels</a></li>
-						<li><a href="concessionnaires.html">Distributeur</a></li>
-						<li><a href="entreprise.html">Qui sommes-nous?</a></li>
-						<li><a href="nouvelles.html" class="activo">Nouvelles</a></li>
+						<li><a class="activo" href="professionnels.html">Professionnels</a></li>
+						<li><a href="nouvelles.html">Nouvelles</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
+					<div class="dropdown" style="top: -20px;">
+						<button class="dropbtn"><img src="../imagenes/flags/france.png"></button>
+						<div class="dropdown-content">
+							<a href="https://www.topciment.com"> <img src="../imagenes/flags/spain.png"> </a>
+							<a href="https://www.topciment.com/fr/"><img src="../imagenes/flags/united-kingdom.png"></a>
+							<a href="https://www.topciment.com/de/"><img src="../imagenes/flags/germany.png"></a>
+							<a href="https://www.topciment.com/it/"><img src="../imagenes/flags/italy.png"></a>
+							<a href="https://www.topciment.com/nl/"><img src="../imagenes/flags/netherlands.png"></a>
+							<a href="https://www.topciment.com/gr/"><img src="../imagenes/flags/greece.png"></a>
+							<a class="ultimo" href="https://www.topciment.ru/"><img
+									src="../imagenes/flags/russia.png"></a>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="contenedorMenuOculto">
-			<div id="sidebar" class="menuOculto menuMicrocementos stick">
-				<ul>
-					<li>
-						<h1><a href="#up" style="font-size:26px">Nouvelles</a></h1>
-					</li>
-					<li><a href="#efecttoquartz">Topciment présente Efectto!</a></li><br>
-					<li><a href="#sttandard">Topciment change son image!</a></li><br>
-
-					<li><a href="#couleurs">Erreurs à éviter lors de<br>la combination des couleurs</a></li><br>
-					<li><a href="#beton-cire-per-cuisine">Béton ciré<br> pour cuisine</a></li><br>
-					<li><a href="#beton-cire-sans-problemes">Béton ciré sans<br> problèmes</a></li><br>
-					<li><a href="#nouveaux-produits">Nouveaux produits de <br>nettoyage et d’entretien <br>pour
-							béton-ciré</a></li><br>
-					<li><a href="#que-es-microcemento">Topciment renouvelle une<br>année de plus son <br>accord avec
-							CYPE</a></li><br>
-				</ul>
-			</div>
-
 		</div>
 	</div>
 
@@ -249,7 +251,7 @@
 
 
 	<div id="main">
-		<div class="container clearfix">
+		<div>
 			<div id="content">
 				<section id="up">
 					<!-- Start new -->
@@ -1034,62 +1036,7 @@
 		//-->
 	</script>
 
-	<script>
-		$(document).ready(function () {
-			/**
-			 * This part does the "fixed navigation after scroll" functionality
-			 * We use the jQuery function scroll() to recalculate our variables as the
-			 * page is scrolled/
-			 */
 
-			/**
-			 * This part causes smooth scrolling using scrollto.js
-			 * We target all a tags inside the nav, and apply the scrollto.js to it.
-			 */
-			$(".menuMicrocementos a").click(function (evn) {
-				evn.preventDefault();
-				$('html,body').scrollTo(this.hash, this.hash);
-			});
-			/**
-			 * This part handles the highlighting functionality.
-			 * We use the scroll functionality again, some array creation and
-			 * manipulation, class adding and class removing, and conditional testing
-			 */
-			var aChildren = $(".menuMicrocementos li").children(); // find the a children of the list items
-			var aArray = []; // create the empty aArray
-			for (var i = 0; i < aChildren.length; i++) {
-				var aChild = aChildren[i];
-				var ahref = $(aChild).attr('href');
-				aArray.push(ahref);
-			} // this for loop fills the aArray with attribute href values
-
-			$(window).scroll(function () {
-				var windowPos = $(window).scrollTop(); // get the offset of the window from the top of page
-				var windowHeight = $(window).height(); // get the height of the window
-				var docHeight = $(document).height();
-
-				for (var i = 0; i < aArray.length; i++) {
-					var theID = aArray[i];
-					var divPos = $(theID).offset().top; // get the offset of the div from the top of page
-					var divPos = divPos - 200;
-					var divHeight = $(theID).height(); // get the height of the div in question
-					if (windowPos >= divPos && windowPos < (divPos + divHeight)) {
-						$("a[href='" + theID + "']").addClass("activo");
-					} else {
-						$("a[href='" + theID + "']").removeClass("activo");
-					}
-				}
-
-				if (windowPos + windowHeight == docHeight) {
-					if (!$(".menuMicrocementos li:last-child a").hasClass("activo")) {
-						var navActiveCurrent = $("activo").attr("href");
-						$("a[href='" + navActiveCurrent + "']").removeClass("activo");
-						$(".menuMicrocementos li:last-child a").addClass("activo");
-					}
-				}
-			});
-		});
-	</script>
 
 	<script type="text/javascript" src="../js/parallax.js"></script>
 	<script type="text/javascript" src="../js/codigo2.js"></script>
@@ -1173,6 +1120,7 @@ function PonerCookie(){
 }
 </script-->
 	<script type='text/javascript' src='https://www.topciment.com/zcga.js'></script>
-<script type='text/javascript' src='https://www.topciment.com/js/cookies.js'></script></body>
+	<script type='text/javascript' src='https://www.topciment.com/js/cookies.js'></script>
+</body>
 
 </html>
