--- a/fr/professionnels.html
+++ b/fr/professionnels.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
   <!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
   <link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
   <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-  <meta name="language" content="fr-FR" />
+  <meta name="language" content="fr" />
   <link rel="publisher" href="https://plus.google.com/+topciment" />
 
   <link
@@ -42,8 +42,8 @@
   <link rel="canonical" href="https://www.topciment.com/fr/professionnels.html" />
 
   <link rel="alternate" href="https://www.topciment.com/profesionales.html" hreflang="es-ES" />
-  <link rel="alternate" href="https://www.topciment.com/en/professionals.html" hreflang="en-GB" />
-  <link rel="alternate" href="https://www.topciment.com/fr/professionnels.html" hreflang="fr-FR" />
+  <link rel="alternate" href="https://www.topciment.com/en/professionals.html" hreflang="en" />
+  <link rel="alternate" href="https://www.topciment.com/fr/professionnels.html" hreflang="fr" />
   <link rel="alternate" href="https://www.topciment.com/de/die-ecke-vom-fachmann.html" hreflang="de-DE" />
   <link rel="alternate" href="https://www.topciment.com/it/professionisti.html" hreflang="it-IT" />
   <link rel="alternate" href="https://www.topciment.com/nl/voor-de-vakman.html" hreflang="nl-NL" />
@@ -492,14 +492,14 @@
             <div class="col-md-3 col2F">
               <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
               <ul class="ulF proyectos">
-                <li class="suelosF"><a class="linkB" href="gallery.html#suelos">Rénovation de sols </a></li>
-                <li class="paredesF"><a class="linkB" href="gallery.html#paredes">Revêtements de murs</a></li>
-                <li class="banyoF"><a class="linkB" href="gallery.html#banyo">Rénovation de salle de bains </a></li>
-                <li class="cocinasF"><a class="linkB" href="gallery.html#cocinas">Rénovation de cuisine</a></li>
-                <li class="decontiuosF"><a class="linkB" href="gallery.html#decontinuos">Revêtements décoratives
+                <li class="suelosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de sols </a></li>
+                <li class="paredesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de murs</a></li>
+                <li class="banyoF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation de salle de bains </a></li>
+                <li class="cocinasF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de cuisine</a></li>
+                <li class="decontiuosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements décoratives
                     continues</a></li>
-                <li class="mueblesF"><a class="linkB" href="gallery.html#muebles">Décoration de meubles</a></li>
-                <li class="azulejosF"><a class="linkB" href="gallery.html#azulejos">Recouvrir carrelage </a></li>
+                <li class="mueblesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de meubles</a></li>
+                <li class="azulejosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir carrelage </a></li>
 
               </ul>
             </div>
