--- a/fr/projet-javier-miami-acceuil.html
+++ b/fr/projet-javier-miami-acceuil.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 <head>
 <meta charset="utf-8"><meta name="theme-color" content="#000"/>
 <meta name="viewport" content="width=device-width" />
 <!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
 <link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
 <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-<meta name="language" content="fr-FR" />
+<meta name="language" content="fr" />
 <link rel="publisher" href="https://plus.google.com/+topciment" />
 
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -158,7 +158,7 @@ fbq('track', "PageView"); </script> <noscript><img height="1" width="1" style="d
     <div class="menuOculto menuGaleria">
         <ul>
             <li><a href="#up" style="font-size:26px">Proyecto Javier Miami</a></li>
-          <!--  <li><a href="gallery.html">Suelos de Microcemento</a></li>
+          <!--  <li><a href="photos-du-revetement-decoratif-beton-cire.html">Suelos de Microcemento</a></li>
             <!--li><a href="galeria-microcemento-de-alto-transito.html">Microcemento de alto transito</a></li-->
              <li><a href="#">Microcemento en paredes</a></li>
             <li><a href="#">Microcemento en baños</a></li>
