--- a/fr/projet-malermeister.html
+++ b/fr/projet-malermeister.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
     <link rel="stylesheet" type="text/css" href="../css/fr-estilo.css">
     <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-    <meta name="language" content="fr-FR" />
+    <meta name="language" content="fr" />
     <link rel="publisher" href="https://plus.google.com/+topciment" />
 
     <link
@@ -27,8 +27,8 @@
     <link rel="canonical" href="https://www.topciment.com/fr/projet-malermeister.html" />
 
     <link rel="alternate" href="https://www.topciment.com/proyecto-malermeister.html" hreflang="es-ES" />
-    <link rel="alternate" href="https://www.topciment.com/en/proyecto-malermeister.html" hreflang="en-GB" />
-    <link rel="alternate" href="https://www.topciment.com/fr/projet-malermeister.html" hreflang="fr-FR" />
+    <link rel="alternate" href="https://www.topciment.com/en/proyecto-malermeister.html" hreflang="en" />
+    <link rel="alternate" href="https://www.topciment.com/fr/projet-malermeister.html" hreflang="fr" />
     <link rel="alternate" href="https://www.topciment.com/de/proyecto-malermeister.html" hreflang="de-DE" />
     <link rel="alternate" href="https://www.topciment.com/it/proyecto-malermeister.html" hreflang="it-IT" />
     <link rel="alternate" href="https://www.topciment.com/nl/projecten-malermeister.html" hreflang="nl-NL" />
