--- a/fr/index.html
+++ b/fr/index.html
@@ -523,17 +523,20 @@
                     "y": "50",
                     "alpha": "0",
                     "duration": "1"}'>
-						<h1 class="enHome3 br1">IT'S MORE THAN <span class="negrita">MICROCEMENT,</span><br>IT'S <span
-								class="negrita">TOPCIMENT</span></h1>
-						<h2 class="txHome2 br1"> At Topciment, excellence leads the way.</h2>
-						<h2 class=" txHome2 br1">
-							We develop high performance decorative coatings, easy to apply and with exclusive finishes.
+						<h1 class="enHome3 br1">C'EST PLUS QUE DU <span class="negrita">BÉTON CIRÉ,</span><br>C'EST
+							<span class="negrita">TOPCIMENT</span></h1>
+						<h2 class="txHome2 br1"> Chez Topciment l'excellence marque la voie.
 						</h2>
 						<h2 class=" txHome2 br1">
-							We carefully select materials, textures and final results.</h2>
+							Nous développons des revêtements décoratifs hautes performances, faciles à appliquer et avec
+							des finitions exclusives
+						</h2>
+						<h2 class=" txHome2 br1">
+							Nous sélectionnons soigneusement les matériaux, les textures et les résultats finaux</h2>
 
-						<h2 class="txHome2 br1">We offer proven, recognisable, quality products with great international
-							scope.</h2>
+						<h2 class="txHome2 br1">Nous proposons des produits de qualité éprouvés, reconnaissables, avec
+							une large portée internationale.
+						</h2>
 						<h2 class="txHome2 ">
 							Our experience and innovation sets us apart from any microcement or coating on the market.
 						</h2>
@@ -552,7 +555,7 @@
 							<img class="logoIni2"
 								src="../imagenes/sistemas/Sttandard_Topciment_Logotipo_Blanco_200px.png"
 								alt="Microcemento bicomponente" title="Microcemento bicomponente">
-							<h2 class="enHome text-uppercase">The versatility of infinite creations</h2>
+							<h2 class="enHome text-uppercase">La polyvalence des créations infinis </h2>
 						</div>
 					</div>
 				</div>
@@ -567,7 +570,7 @@
 						<div class="col-md-12  text-center">
 							<img class="logoIni2" src="../imagenes/sistemas/logo_unlimitted_pagina_principal_200px.png"
 								alt="Microcemento monocomponente" title="Microcemento monocomponente">
-							<h2 class="enHome">AT THE VANGUARD OF TECHNIQUE</h2>
+							<h2 class="enHome text-uppercase">A la pointe de la technologie </h2>
 						</div>
 					</div>
 				</div>
@@ -584,7 +587,7 @@
 							<img class="logoIni2"
 								src="../imagenes/sistemas/Evoluttion_Topciment_Logotipo_Blanco_200px.png"
 								alt="Microcemento monocomponente" title="Microcemento monocomponente">
-							<h2 class="enHome text-uppercase">The simplicity of the authentic</h2>
+							<h2 class="enHome text-uppercase">La simplicité de l'authentique </h2>
 						</div>
 					</div>
 				</div>
@@ -600,7 +603,7 @@
 						<div class="col-md-12  text-center">
 							<img class="logoIni2" src="../imagenes/sistemas/logo_atlanttic_pagina_principal_200px.png"
 								alt="Microcemento para piscinas" title="Microcemento para piscinas">
-							<h2 class="enHome"> UNIQUE CREATIONS FOR UNDERWATER SPACES </h2>
+							<h2 class="enHome text-uppercase"> Creations uniques pour des espaces submergés </h2>
 						</div>
 					</div>
 				</div>
@@ -614,7 +617,7 @@
 						<div class="col-md-12  text-center">
 							<img class="logoIni2" src="../imagenes/sistemas/Efectto_Topciment_Logotipo_Blanco_200px.png"
 								alt="Microcemento listo al uso" title="Microcemento listo al uso">
-							<h2 class="enHome text-uppercase">The beauty and elegance of inimitable finishes</h2>
+							<h2 class="enHome text-uppercase">La beauté et l'élégance des finitions inimitables </h2>
 
 						</div>
 					</div>
@@ -630,7 +633,7 @@
 							<img class="logoIni2"
 								src="../imagenes/sistemas/Pure_Mettal_Topciment_Logotipo_Blanco_200px.png"
 								alt="Microcemento metálico" title="Microcemento metálico">
-							<h2 class="enHome text-uppercase">The revolution in decorative coatings </h2>
+							<h2 class="enHome text-uppercase">La révolution des revêtements décoratifs </h2>
 
 						</div>
 					</div>
@@ -646,7 +649,7 @@
 							<img class="logoIni2"
 								src="../imagenes/sistemas/Classic_Mettal_Topciment_Logotipo_Blanco_200px.png"
 								alt="Pintura metálica natural y óxido" title="Pintura metálica natural y óxido">
-							<h2 class="enHome text-uppercase">The essence of natural with oxidised finishes</h2>
+							<h2 class="enHome text-uppercase">L'essence de la nature avec des finitions rouillés.</h2>
 
 						</div>
 					</div>
@@ -664,7 +667,7 @@
 							<img class="logoIni2" src="../imagenes/sistemas/Elitte_Topciment_Logotipo_Blanco_200px.png"
 								alt="Efecto metálico y veladuras" title="Efecto metálico y veladuras">
 
-							<h2 class="enHome text-uppercase">Lights and shadows of metallic reflections</h2>
+							<h2 class="enHome text-uppercase">Lumières et ombres de reflets métalliques </h2>
 						</div>
 					</div>
 				</div>
@@ -676,13 +679,11 @@
 				style="cursor:pointer;">
 				<div class="contenedorTexto">
 					<div class="texotHome" data-animate-scroll='{"x": "0","y": "50",alpha": "0", "duration": "1"}'>
-						<h2 class="enHome2 text-white"> FIND THE INSPIRATION</h2>
-						<h3 class=" h3s txHome text-white"> It is said that a picture is worth a thousand words . In our
-							gallery you
-							can
-							find much more than inspiration. Here we show you the works made by our best professionals
-							so that you can
-							get to know all the possibilities offered by microcement.
+						<h2 class="enHome2 text-white text-uppercase">Trouvez l'inspiration</h2>
+						<h3 class=" h3s txHome text-white"> On dit que pour un échantillon une image. Dans notre galerie
+							vous pouvez trouver beaucoup que de l'insiration. Dans celle ci , nous vous montrons les
+							chantiers réalisés par nos meilleurs professionels pour que vous connaissiez toutes les
+							possibilitées qu'offre le béton ciré.
 						</h3>
 					</div>
 
@@ -696,11 +697,10 @@
 			<div class="content-a" onClick="location.href='professionnels.html'" style="cursor:pointer;">
 				<div class="contenedorTexto">
 					<div class="texotHome" data-animate-scroll='{"x": "0","y": "50",alpha": "0", "duration": "1"}'>
-						<h2 class="enHome2 text-black "> SUPPORTING PROFESSIONALSS</h2>
-						<h3 class="h3s txHome text-black mt-4 prof"> We share our experience with professionals through
-							training and
-							permanent technical advice so that the results of the application of microcement are
-							optimal.
+						<h2 class="enHome2 text-black text-uppercase"> Soutien aux professionnels</h2>
+						<h3 class="h3s txHome text-black mt-4 prof">Nous transmettons notre expérience aux
+							professionnels à l'aide de formation et conseils techniques permanent pour que les résultats
+							de l'application de béton ciré soit optimum.
 						</h3>
 					</div>
 				</div>
@@ -711,13 +711,11 @@
 			<div class="content-a" onClick="location.href='nouvelles.html'" style="cursor:pointer;">
 				<div class="contenedorTexto">
 					<div class="texotHome" data-animate-scroll='{"x": "0","y": "50",alpha": "0", "duration": "1"}'>
-						<h2 class="enHome2 text-white "> NEWS</h2>
-						<h3 class=" h3s txHome text-white"> We are constantly researching, creating and designing new
-							Topciment
-							products.
-							And, of course, we are immersed in the latest news and trends in microcement and decorative
-							coatings. We
-							tell you all about it in our news section.
+						<h2 class="enHome2 text-white text-uppercase"> Informations</h2>
+						<h3 class=" h3s txHome text-white"> Nous recherchons , creons , et conçevons des nouveaux
+							produits Topciment de manière constante. Et biensur, nous sommes immergés dnas les
+							nouveautés et tendances du béton ciré et revêtements décoratifs. Tout cela, nous vous
+							l'expliquons dans notre section d'actualités.
 						</h3>
 					</div>
 				</div>
@@ -727,8 +725,8 @@
 			<div class="content-a" onClick="location.href='contact.html'" style="cursor:pointer;">
 				<div class="contenedorTexto">
 					<div class="texotHome" data-animate-scroll='{"x": "0","y": "50",alpha": "0", "duration": "1"}'>
-						<h2 class="enHome2 text-white ">CONTACT US!</h2>
-						<h3 class=" h3s txHome text-white"> If you need more information, do not hesitate to contact us.
+						<h2 class="enHome2 text-white text-uppercase">Contactez nous!</h2>
+						<h3 class=" h3s txHome text-white"> Pour plus d'information , n'hésitez pas à nous contacter.
 						</h3>
 					</div>
 
