--- a/fr/solutions-en-beton-cire-pour-toutes-les-surfaces.html
+++ b/fr/solutions-en-beton-cire-pour-toutes-les-surfaces.html
@@ -739,22 +739,25 @@
           </h3>
         </div>
         <!-- Products TopTools -->
+
+
+
         <div class="col-md-3 col-12">
           <div class="row mb-2 ">
             <div class="col-md-12 col-6 p-0"> <a href="systemes/outils.html#varilla" class="vermas">
-                <strong>Mixing rod</strong></a><br>
+                <strong>Tige de mélangeur acier inoxidable </strong></a><br>
               <a href="systemes/outils.html#perfil" class="vermas">
-                <strong>Profile aluminium</strong></a><br>
+                <strong>Profile Aluminium </strong></a><br>
               <a href="systemes/outils.html#llana-goma" class="vermas">
-                <strong>Microcement trowel rubber</strong></a>
+                <strong>Taloche Béton ciré gomme</strong></a>
             </div>
             <div class="col-md-12 col-6 p-0">
               <a href="systemes/outils.html#llana-acero" class="vermas">
-                <strong>Microcement trowel bi-flex steel</strong></a><br>
+                <strong>Taloche beton cire en acier Bi-Flex</strong></a><br>
               <a href="systemes/outils.html#malla" class="vermas">
-                <strong>Fiberglass mesh builtex</strong></a><br>
+                <strong>Maille en fibre de verre builtex</strong></a><br>
               <a href="systemes/outils.html#rodillo" class="vermas">
-                <strong>Short-haired roller</strong></a>
+                <strong>Rouleau a poils court </strong></a>
             </div>
           </div>
         </div>
@@ -800,14 +803,21 @@
           <div class="col-md-3 col2F">
             <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
             <ul class="ulF proyectos">
-              <li class="suelosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de sols </a></li>
-              <li class="paredesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de murs</a></li>
-              <li class="banyoF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation de salle de bains </a></li>
-              <li class="cocinasF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de cuisine</a></li>
-              <li class="decontiuosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements décoratives
+              <li class="suelosF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#suelos">Rénovation de sols </a></li>
+              <li class="paredesF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#paredes">Revêtements de murs</a></li>
+              <li class="banyoF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#banyo">Rénovation
+                  de salle de bains </a></li>
+              <li class="cocinasF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#cocinas">Rénovation de cuisine</a></li>
+              <li class="decontiuosF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#decontinuos">Revêtements décoratives
                   continues</a></li>
-              <li class="mueblesF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de meubles</a></li>
-              <li class="azulejosF"><a class="linkB" href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir carrelage </a></li>
+              <li class="mueblesF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#muebles">Décoration de meubles</a></li>
+              <li class="azulejosF"><a class="linkB"
+                  href="photos-du-revetement-decoratif-beton-cire.html#azulejos">Recouvrir carrelage </a></li>
             </ul>
           </div>
           <div class="col-md-3 col3F">
