--- a/fr/systemes/arcocem-pigments.html
+++ b/fr/systemes/arcocem-pigments.html
@@ -397,7 +397,7 @@
                         Rendements</p>
                     <p>En fonction de la couleur de la dose à réaliser</p>
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-                        Couleurss</p>
+                        Couleurs</p>
                     <div class="row text-center mb-2">
                         <div class="col-md-4">
 
@@ -606,19 +606,32 @@
                 <div class="col-md-3 col2F">
                     <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
                     <ul class="ulF proyectos">
-                        <li class="suelosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols </a></li>
-                        <li class="paredesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de murs</a>
-                        </li>
-                        <li class="banyoF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle de bains
+                        <li class="suelosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols
                             </a></li>
-                        <li class="cocinasF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de cuisine</a>
+                        <li class="paredesF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de
+                                murs</a>
                         </li>
-                        <li class="decontiuosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements
+                        <li class="banyoF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle
+                                de bains
+                            </a></li>
+                        <li class="cocinasF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de
+                                cuisine</a>
+                        </li>
+                        <li class="decontiuosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements
                                 décoratives
                                 continues</a></li>
-                        <li class="mueblesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de meubles</a>
+                        <li class="mueblesF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de
+                                meubles</a>
                         </li>
-                        <li class="azulejosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir carrelage </a>
+                        <li class="azulejosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir
+                                carrelage </a>
                         </li>
                     </ul>
                 </div>
