--- a/fr/systemes/sttandard-beton-cire-bicomposant.html
+++ b/fr/systemes/sttandard-beton-cire-bicomposant.html
@@ -26,6 +26,8 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/restyle.css">
     <script type='text/javascript' src='../../js/mycode.js'></script>
+    <link rel="stylesheet" href="../../css/lightbox.min.css">
+    <script src="../../js/lightbox-plus-jquery.min.js"></script>
     <!-- End new styles -->
 
     <title>Béton ciré bicomposant pour les revêtements décoratifs </title>
@@ -1621,19 +1623,32 @@
                 <div class="col-md-3 col2F">
                     <h6 class="tituloF proyectosF"><strong>PROJETS</strong></h6>
                     <ul class="ulF proyectos">
-                        <li class="suelosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols </a></li>
-                        <li class="paredesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de murs</a>
-                        </li>
-                        <li class="banyoF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle de bains
+                        <li class="suelosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#suelos">Rénovation de sols
                             </a></li>
-                        <li class="cocinasF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de cuisine</a>
+                        <li class="paredesF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#paredes">Revêtements de
+                                murs</a>
                         </li>
-                        <li class="decontiuosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements
+                        <li class="banyoF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#banyo">Rénovation de salle
+                                de bains
+                            </a></li>
+                        <li class="cocinasF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#cocinas">Rénovation de
+                                cuisine</a>
+                        </li>
+                        <li class="decontiuosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#decontinuos">Revêtements
                                 décoratives
                                 continues</a></li>
-                        <li class="mueblesF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de meubles</a>
+                        <li class="mueblesF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#muebles">Décoration de
+                                meubles</a>
                         </li>
-                        <li class="azulejosF"><a class="linkB" href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir carrelage </a>
+                        <li class="azulejosF"><a class="linkB"
+                                href="../photos-du-revetement-decoratif-beton-cire.html.html#azulejos">Recouvrir
+                                carrelage </a>
                         </li>
                     </ul>
                 </div>
