--- a/en/systems/elitte-glazes-and-metallic-pigments.html
+++ b/en/systems/elitte-glazes-and-metallic-pigments.html
@@ -275,11 +275,13 @@
                             <p class="en2">
                                 What is Elitte?</p>
                             <div class="text-justify">
-                                <p>
-                                    <h1 class="h2s">Elitte</h1>
-                                    <h2 class="h3s"></h2>
-                                </p>
-                                <p>It is a very versatile product that offers a wide variety of finishes and achieves a
+
+                                <h1 class="h2s">Elitte</h1>
+                                <h2 class="h3s">
+                                    is the range of glazes with metallic reflections.
+                                </h2>
+
+                                <p> It is a very versatile product that offers a wide variety of finishes and achieves a
                                     pleasant and changing play of light and reflected colours.
                                     It offers many application possibilities. It has no limits. </p>
                                 <p>The Elitte range of paints has two varieties of results: metallic finish (Glaze) and
@@ -448,7 +450,7 @@
                     <!-- Presentación -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Packaging</p>
-                    <p>Elitte Glitter is available in 500 mL bottles.
+                    <p>Elitte Glaze is available in 500 mL bottles.
                     </p>
                 </div>
             </div>
